<resources>
    <string name="app_name">WyCalc</string>
    <string name="button_number_1">1</string>
    <string name="button_number_2">2</string>
    <string name="button_number_3">3</string>
    <string name="button_number_4">4</string>
    <string name="button_number_5">5</string>
    <string name="button_number_6">6</string>
    <string name="button_number_7">7</string>
    <string name="button_number_8">8</string>
    <string name="button_number_9">9</string>
    <string name="button_number_0">0</string>
    <string name="button_operation_add">+</string>
    <string name="button_operation_sub">-</string>
    <string name="button_operation_mul">*</string>
    <string name="button_operation_div">/</string>
    <string name="button_operation_equal">=</string>
</resources>
