<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberField1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="151dp"
        android:layout_marginBottom="13dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/operationField"
        app:layout_constraintEnd_toEndOf="@+id/numberField2"
        app:layout_constraintStart_toStartOf="@+id/numberField2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_operation_equal"
        android:layout_width="71dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:text="@string/button_operation_equal"
        app:layout_constraintBottom_toTopOf="@+id/button_number_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_operation_sub" />

    <Button
        android:id="@+id/button_number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="22dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_1"
        app:layout_constraintBottom_toTopOf="@+id/button_number_4"
        app:layout_constraintEnd_toStartOf="@+id/button_number_2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_operation_add" />

    <Button
        android:id="@+id/button_number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_2"
        app:layout_constraintBottom_toTopOf="@+id/button_number_5"
        app:layout_constraintEnd_toStartOf="@+id/button_number_3"
        app:layout_constraintStart_toEndOf="@+id/button_number_1"
        app:layout_constraintTop_toBottomOf="@+id/button_operation_equal" />

    <Button
        android:id="@+id/button_number_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="22dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_3"
        app:layout_constraintBottom_toTopOf="@+id/button_number_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_number_2"
        app:layout_constraintTop_toBottomOf="@+id/button_operation_div" />

    <Button
        android:id="@+id/button_number_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="23dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_4"
        app:layout_constraintBottom_toTopOf="@+id/button_number_7"
        app:layout_constraintEnd_toStartOf="@+id/button_number_5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_number_1" />

    <Button
        android:id="@+id/button_number_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_5"
        app:layout_constraintBottom_toTopOf="@+id/button_number_8"
        app:layout_constraintEnd_toStartOf="@+id/button_number_6"
        app:layout_constraintStart_toEndOf="@+id/button_number_4"
        app:layout_constraintTop_toBottomOf="@+id/button_number_2" />

    <Button
        android:id="@+id/button_number_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="23dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_6"
        app:layout_constraintBottom_toTopOf="@+id/button_number_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_number_5"
        app:layout_constraintTop_toBottomOf="@+id/button_number_3" />

    <Button
        android:id="@+id/button_number_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="89dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_number_8"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_number_4" />

    <Button
        android:id="@+id/button_number_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_8"
        app:layout_constraintBottom_toTopOf="@+id/button_number_0"
        app:layout_constraintEnd_toStartOf="@+id/button_number_9"
        app:layout_constraintStart_toEndOf="@+id/button_number_7"
        app:layout_constraintTop_toBottomOf="@+id/button_number_5" />

    <Button
        android:id="@+id/button_number_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_number_8"
        app:layout_constraintTop_toBottomOf="@+id/button_number_8" />

    <Button
        android:id="@+id/button_number_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="89dp"
        android:onClick="onNumberClick"
        android:text="@string/button_number_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_number_8"
        app:layout_constraintTop_toBottomOf="@+id/button_number_6" />

    <Button
        android:id="@+id/button_operation_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="80dp"
        android:text="@string/button_operation_add"
        app:layout_constraintBottom_toTopOf="@+id/button_number_1"
        app:layout_constraintEnd_toStartOf="@+id/button_operation_sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_operation_sub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="13dp"
        android:text="@string/button_operation_sub"
        app:layout_constraintBottom_toTopOf="@+id/button_operation_equal"
        app:layout_constraintEnd_toStartOf="@+id/button_operation_mul"
        app:layout_constraintStart_toEndOf="@+id/button_operation_add"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_operation_mul"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:text="@string/button_operation_mul"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_operation_div"
        app:layout_constraintEnd_toStartOf="@+id/button_operation_div"
        app:layout_constraintStart_toEndOf="@+id/button_operation_sub" />

    <Button
        android:id="@+id/button_operation_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="82dp"
        android:text="@string/button_operation_div"
        app:layout_constraintBottom_toTopOf="@+id/button_number_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_operation_mul"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberField2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="11dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/resultField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_operation_equal"
        app:layout_constraintTop_toBottomOf="@+id/operationField" />

    <TextView
        android:id="@+id/resultField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="422dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/numberField2"
        app:layout_constraintTop_toBottomOf="@+id/numberField2" />

    <TextView
        android:id="@+id/operationField"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="14dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/numberField2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberField1" />

</android.support.constraint.ConstraintLayout>